XMLExper/m12/m12_59_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:756:66: error: lvalue required as left operand of assignment
  756 |         /*PCI*/dynamic_cast<tinyxml2::XMLUnknown*>(returnNode) = text;
      |                                                                  ^~~~
diff: tinyxml2.o: No such file or directory
